# pi-bot

./: Cargo.toml
data/: cities.json
src/: main.rs
src/commands/: dropbox.rs  info.rs  mod.rs  ping.rs  weather.rs
