[package]
name = "pi-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.28"
poise = "0.5.5"
reqwest = "0.11.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder"] }
systemstat = "0.2.3"
tempfile = "3.5.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
